Use manually registered grpc client bean if exists (#77)
* Use manually registered grpc client bean if exists

* use manually registered grpc client bean if exists

* add getBeanDefinitionClass method